[Fuchsia] Don't crash when FontProvider is not available

FuchsiaFontMgr was crashing the process when it fails to get default
font from FontProvider. This was causing some unittests to fail because
FontProvider is not available in the SDK image. Remove that restriction
and make FuchsiaFontMgr use an empty font in that case.

TBR=thakis@chromium.org

Change-Id: I010400688918d046cff1b4f41eb21a7c8b7c47ae
Bug: 860786
Reviewed-on: https://chromium-review.googlesource.com/1128275
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573083}
Former-commit-id: 1e4566e9cc9be8707b37b3441019863d03bc5ddc